--- a/legal/privacy-policy.html
+++ b/legal/privacy-policy.html
@@ -43,9 +43,63 @@ fbq('track', 'PageView');
         <div class="legal-text-wrapper">
           <h1 class="margin-40">Privacy Policy</h1>
           <div class="w-richtext">
-            <p>Last modified: 09.06.2021<br></p>
+            <p>Last modified: 04.06.2023<br></p>
             <h3><strong>1. General</strong></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nibh pulvinar lectus ornare leo. Adipiscing ornare pellentesque aenean non. Dui venenatis, urna enim viverra non malesuada malesuada auctor. Id rhoncus, consequat amet adipiscing scelerisque suspendisse vulputate. Nunc duis viverra felis nec urna. Sed neque nisi nisi fusce felis, pellentesque arcu adipiscing eget. Nulla eu, faucibus in mollis. Magna pellentesque nam donec nulla elit. Non lacus in egestas pulvinar aliquam faucibus faucibus vitae lorem. Ac commodo pellentesque nec placerat erat massa, ipsum. Habitasse in non donec adipiscing ut. Maecenas urna, nec vulputate ut ac adipiscing. Massa ornare dictum ac massa neque pellentesque volutpat eget. Euismod consequat interdum vitae nibh dolor cursus.<br><br>Adipiscing est mauris tortor cras magna nunc. Sit imperdiet pretium tempor eleifend. Suspendisse rhoncus tincidunt amet venenatis magna blandit dignissim egestas ante. Amet lectus at hac pellentesque mauris. Fermentum in sed dictum a quis egestas. Urna a, feugiat commodo, nunc nibh. At ut gravida lacinia amet. Sit eu congue a curabitur feugiat adipiscing quisque pretium. Nibh id ut sit mauris dui diam tincidunt cras. Nisl a dolor, quis sit nisl sit justo. Habitant cursus mi et sagittis egestas blandit elementum sed. Aenean vel sagittis, quis quis euismod. Sed elit elementum habitant turpis ultrices nunc in sit.<br><br>Sit aliquam adipiscing ornare venenatis viverra nulla pellentesque elit placerat. Adipiscing pellentesque proin nullam augue risus. Pharetra, egestas viverra enim massa senectus imperdiet quis massa venenatis. Elit mattis placerat placerat purus dolor integer dictumst sit. Non sollicitudin gravida nunc faucibus cursus sit. In maecenas libero aliquet enim et. Vulputate viverra pellentesque pellentesque aliquet.</p>
+            <p>
+Looper ("us", "we", or "our") operates the Looper mobile application (the "Service"). This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.
+
+By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.
+
+Information Collection and Use
+
+We collect several different types of information for various purposes to provide and improve our Service to you.
+
+Types of Data Collected
+
+Personal Data
+
+While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may include, but is not limited to:
+
+Email address
+First name and last name
+Cookies and Usage Data
+Usage Data
+
+When you access the Service with a mobile device, we may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile device's unique device ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browser you use, and other diagnostic data ("Usage Data").
+
+Use of Data
+
+Looper uses the collected data for various purposes:
+
+To provide and maintain the Service
+To notify you about changes to our Service
+To allow you to participate in interactive features of our Service when you choose to do so
+To provide customer care and support
+To provide analysis or valuable information so that we can improve the Service
+To monitor the usage of the Service
+To detect, prevent and address technical issues
+Disclosure of Data
+
+We may disclose your Personal Data in the good faith belief that such action is necessary to:
+
+To comply with a legal obligation
+To protect and defend the rights or property of [Your Company Name]
+To prevent or investigate possible wrongdoing in connection with the Service
+To protect the personal safety of users of the Service or the public
+To protect against legal liability
+Security of Data
+
+The security of your data is important to us, but remember that no method of transmission over the Internet or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.
+
+Children's Privacy
+
+Our Service does not address anyone under the age of 13 ("Children"). We do not knowingly collect personally identifiable information from anyone under the age of 13. If you are a parent or guardian and you are aware that your child has provided us with Personal Data, please contact us. If we become aware that we have collected Personal Data from children without verification of parental consent, we take steps to remove that information from our servers.
+
+Changes to This Privacy Policy
+
+We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.
+
+You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
             <p>‍</p>
             <p><br></p>
           </div>
