unhide footer link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ fbq('track', 'PageView');
           <div class="small margin-bottom-16">© 2023 Looper</div>
           <div class="footer-flex">
             <a href="legal/terms-of-service.html" class="small right hide">Terms of Service</a>
-            <a href="legal/privacy-policy.html" class="small right hide">Privacy Policy</a>
+            <a href="legal/privacy-policy.html" class="small right">Privacy Policy</a>
           </div>
         </div>
       </div>
